Add Contacts VC + TableView with Contacts permission

--- a/Pcaller/Base.lproj/Main.storyboard
+++ b/Pcaller/Base.lproj/Main.storyboard
@@ -19,10 +19,68 @@
                     <view key="view" contentMode="scaleToFill" id="Y4a-Gy-UVF">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="2ao-fj-crl">
+                                <rect key="frame" x="0.0" y="47" width="390" height="714"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Contacts" rowHeight="67" id="rGM-29-jNv" customClass="ContactsTableViewCell" customModule="Pcaller" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="390" height="67"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rGM-29-jNv" id="euR-J8-YQk">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="67"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nmv-Sv-Bfm">
+                                                    <rect key="frame" x="20" y="6" width="49" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ata-Xn-A9J">
+                                                    <rect key="frame" x="20" y="38" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F1Q-zF-Pjc">
+                                                    <rect key="frame" x="80" y="6" width="48" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="F1Q-zF-Pjc" firstAttribute="top" secondItem="euR-J8-YQk" secondAttribute="top" constant="6" id="CME-6m-xeS"/>
+                                                <constraint firstItem="F1Q-zF-Pjc" firstAttribute="leading" secondItem="nmv-Sv-Bfm" secondAttribute="trailing" constant="11" id="HE1-R0-awm"/>
+                                                <constraint firstItem="nmv-Sv-Bfm" firstAttribute="top" secondItem="euR-J8-YQk" secondAttribute="top" constant="6" id="T2o-m3-jXr"/>
+                                                <constraint firstItem="ata-Xn-A9J" firstAttribute="leading" secondItem="euR-J8-YQk" secondAttribute="leading" constant="20" symbolic="YES" id="bAc-dt-hrS"/>
+                                                <constraint firstItem="nmv-Sv-Bfm" firstAttribute="leading" secondItem="euR-J8-YQk" secondAttribute="leading" constant="20" symbolic="YES" id="rEF-sh-CY4"/>
+                                                <constraint firstItem="ata-Xn-A9J" firstAttribute="top" secondItem="nmv-Sv-Bfm" secondAttribute="bottom" constant="8" symbolic="YES" id="whM-lO-8mG"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="firstNameLabel" destination="nmv-Sv-Bfm" id="kYk-BU-EDD"/>
+                                            <outlet property="lastNameLabel" destination="F1Q-zF-Pjc" id="Usv-Qw-wfG"/>
+                                            <outlet property="telephoneLabel" destination="ata-Xn-A9J" id="XLr-fX-Vk1"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6dg-AQ-ihn"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="2ao-fj-crl" firstAttribute="top" secondItem="6dg-AQ-ihn" secondAttribute="top" id="2HQ-qW-1l2"/>
+                            <constraint firstItem="2ao-fj-crl" firstAttribute="leading" secondItem="6dg-AQ-ihn" secondAttribute="leading" id="5Mh-ZD-IJH"/>
+                            <constraint firstItem="6dg-AQ-ihn" firstAttribute="bottom" secondItem="2ao-fj-crl" secondAttribute="bottom" id="Y3Q-6h-md2"/>
+                            <constraint firstItem="6dg-AQ-ihn" firstAttribute="trailing" secondItem="2ao-fj-crl" secondAttribute="trailing" id="p9N-i7-tLf"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Contacts" image="person.crop.square" catalog="system" selectedImage="person.crop.square" id="Kyv-YZ-XiS"/>
+                    <connections>
+                        <outlet property="contactsTableView" destination="2ao-fj-crl" id="7N5-on-Ces"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1O9-1z-9ec" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
