--- a/Pcaller/Base.lproj/Main.storyboard
+++ b/Pcaller/Base.lproj/Main.storyboard
@@ -148,8 +148,11 @@
                                                     <rect key="frame" x="320" y="4.3333333333333321" width="54" height="35"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" title="Edit"/>
+                                                    <connections>
+                                                        <action selector="editButton:" destination="Zv1-EG-7sM" eventType="touchUpInside" id="2QN-VG-8ta"/>
+                                                    </connections>
                                                 </button>
-                                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QxA-de-yCJ">
+                                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QxA-de-yCJ">
                                                     <rect key="frame" x="76" y="5" width="228" height="34"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -177,21 +180,24 @@
                                             <rect key="frame" x="0.0" y="0.0" width="390" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="L9M-J6-2Ac">
-                                                    <rect key="frame" x="16" y="6.3333333333333321" width="51" height="30.999999999999996"/>
-                                                </switch>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Auto switch on Hide my number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HAv-DR-cNG">
                                                     <rect key="frame" x="81" y="11.333333333333336" width="242" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Nun-QJ-DOz">
+                                                    <rect key="frame" x="16" y="6.3333333333333321" width="51" height="30.999999999999996"/>
+                                                    <connections>
+                                                        <action selector="SwitchAutoHideMyNumber:" destination="Zv1-EG-7sM" eventType="valueChanged" id="OcI-Kp-otU"/>
+                                                    </connections>
+                                                </switch>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="HAv-DR-cNG" firstAttribute="leading" secondItem="L9M-J6-2Ac" secondAttribute="trailing" constant="16" id="6uN-4y-LMh"/>
+                                                <constraint firstItem="Nun-QJ-DOz" firstAttribute="centerY" secondItem="cSz-ok-OHS" secondAttribute="centerY" id="3Qo-E4-pSg"/>
                                                 <constraint firstItem="HAv-DR-cNG" firstAttribute="centerY" secondItem="cSz-ok-OHS" secondAttribute="centerY" id="Hx0-ye-NI1"/>
-                                                <constraint firstItem="L9M-J6-2Ac" firstAttribute="leading" secondItem="cSz-ok-OHS" secondAttribute="leading" constant="16" id="OzG-N0-gf9"/>
-                                                <constraint firstItem="L9M-J6-2Ac" firstAttribute="centerY" secondItem="cSz-ok-OHS" secondAttribute="centerY" id="mMc-qe-MyT"/>
+                                                <constraint firstItem="Nun-QJ-DOz" firstAttribute="leading" secondItem="cSz-ok-OHS" secondAttribute="leading" constant="16" id="ViR-vS-hYs"/>
+                                                <constraint firstItem="HAv-DR-cNG" firstAttribute="leading" secondItem="Nun-QJ-DOz" secondAttribute="trailing" constant="16" id="lba-n4-UG9"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -319,14 +325,18 @@
                                             <rect key="frame" x="0.0" y="0.0" width="390" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T5m-0S-LDH">
-                                                    <rect key="frame" x="172" y="4.3333333333333321" width="90" height="35"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T5m-0S-LDH">
+                                                    <rect key="frame" x="150" y="4.3333333333333321" width="90" height="35"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" title="Clear all "/>
+                                                    <connections>
+                                                        <action selector="clearAllButton:" destination="Zv1-EG-7sM" eventType="touchUpInside" id="eDf-UG-cUG"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="T5m-0S-LDH" firstAttribute="centerY" secondItem="seo-n4-78p" secondAttribute="centerY" id="jQa-T9-SmA"/>
+                                                <constraint firstItem="T5m-0S-LDH" firstAttribute="centerX" secondItem="seo-n4-78p" secondAttribute="centerX" id="wXq-aV-mPb"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -340,6 +350,8 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Setting" id="Xl1-T1-qbC"/>
                     <connections>
+                        <outlet property="autoHideMyNumberSwitch" destination="Nun-QJ-DOz" id="NmU-fU-0OU"/>
+                        <outlet property="editButton" destination="KTP-JR-zIl" id="v5h-ER-uqG"/>
                         <outlet property="firstNameSwitch" destination="Gvo-JS-MxM" id="AIV-OV-Igg"/>
                         <outlet property="lastNameSwitch" destination="q2O-qW-oQP" id="S8f-vI-5ps"/>
                         <outlet property="prefixText" destination="QxA-de-yCJ" id="VYb-RV-PvZ"/>
