fix button buynow, add to show alert - style,

--- a/Pcaller/Base.lproj/Main.storyboard
+++ b/Pcaller/Base.lproj/Main.storyboard
@@ -515,8 +515,8 @@
                                         <string key="text">Enjoy making unlimited  anonymous calls
 No subscription fees
 And only at a price of 0.99$
-For lifetime
-Buy now and enjoy</string>
+without monthly subscription  fees, a one-time payment! 
+Buy now</string>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
