--- a/Pcaller/Base.lproj/Main.storyboard
+++ b/Pcaller/Base.lproj/Main.storyboard
@@ -572,7 +572,7 @@ Buy now</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XRv-d3-U09" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1169.5652173913045" y="328.79464285714283"/>
+            <point key="canvasLocation" x="1139" y="365"/>
         </scene>
         <!--Dialer-->
         <scene sceneID="8yq-nn-erp">
